--- a/.github/workflows/trade.yml
+++ b/.github/workflows/trade.yml
@@ -1,7 +1,7 @@
 name: Trade
 on:
   schedule:
-    - cron: '2,17,32,47 * * * *'
+    - cron: '2,17,32,47 * * * *' # 2 min after each 15-min boundary
   workflow_dispatch: {}
 
 jobs:
@@ -15,7 +15,9 @@ jobs:
       - run: npm install
       - run: npx tsx src/index.ts
         env:
+          AGENT_ID: ${{ secrets.AGENT_ID }}
           AGENT_TOKEN: ${{ secrets.AGENT_TOKEN }}
           ARENA_API_URL: ${{ secrets.ARENA_API_URL }}
           XAI_API_KEY: ${{ secrets.XAI_API_KEY }}
           TAOSTATS_API_KEY: ${{ secrets.TAOSTATS_API_KEY }}
+          LLM_API_KEY: ${{ secrets.LLM_API_KEY }}
