--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "agent-arena-agent",
+  "name": "agent-arena-template",
   "version": "0.0.1",
   "private": true,
   "type": "module",
@@ -8,10 +8,12 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "ai": "6.0.85",
+    "@ai-sdk/anthropic": "^3.0.43",
+    "@ai-sdk/google": "^3.0.29",
     "@ai-sdk/mcp": "1.0.21",
+    "@ai-sdk/openai": "^3.0.29",
     "@ai-sdk/xai": "3.0.56",
-    "zod": "3.25.76"
+    "ai": "6.0.85"
   },
   "devDependencies": {
     "@types/node": "22.19.11",
